Completed the code

--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -7,7 +7,7 @@
 
   main {
     max-width: 900px;
-    background-color: white;
+    // background-color: white;
     margin: auto;
     height: 100%;
     padding: 2rem;
