--- a/src/styles/DropdownMenu.scss
+++ b/src/styles/DropdownMenu.scss
@@ -13,7 +13,7 @@
 }
 
 .dropdown-toggle:hover {
-  background-color: #f5f5f5;
+  background-color: white;
 }
 
 .dropdown-menu {
@@ -22,7 +22,7 @@
   left: 0;
   z-index: 1;
   min-width: 120px;
-  background-color: #fff;
+  background-color: white;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 10px 0;
 }
@@ -36,5 +36,5 @@
 }
 
 .dropdown-item:hover {
-  background-color: #f5f5f5;
+  background-color: white;
 }
