--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -8,7 +8,7 @@
     padding-left: 8rem;
     padding-top: 15rem;
     > h1 {
-      font-size: 4rem;
+      font-size: 50px;
       text-transform: uppercase;
     }
 
@@ -46,6 +46,22 @@
     z-index: -1;
   }
 }
+.content-overlay{
+  position:absolute;
+  top:200px;
+  padding-left: 90px;
+  font-size:xx-large;
+}
+
+button{
+  background-color: red;
+  border:1px;
+  border-radius: 50%;
+  padding: 10px;
+}
+
+
+       
 
 @media screen and (max-width: 600px) {
   .home {
