--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -39,6 +39,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  
 
     > img {
       height: 15rem;
@@ -53,6 +54,7 @@
       text-transform: uppercase;
       letter-spacing: 2px;
       padding: 1rem 0;
+      font-size: medium;
     }
 
     > button {
