--- a/src/styles/shipping.scss
+++ b/src/styles/shipping.scss
@@ -3,13 +3,15 @@
 .shipping {
   background-color: $pink;
   width: 100%;
-  height: 100vh;
+  height: 800px;
+  padding:20px;
   > main {
-    height: 100%;
+    height: 700px;
     background-color: white;
     max-width: 900px;
     margin: auto;
     padding: 2rem;
+    
 
     > h1 {
       text-transform: uppercase;
